# nl-loader

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: release-wpf.yml  release.yml
release-notes/: v1.0.5-test.1.md  v1.0.5-test.2.md  v1.0.5.md  v1.0.6-test.1.md  v1.0.6-test.2.md  v1.1.0.md  v1.1.1-test.1.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  downloader.rs  lib.rs  steam.rs
src-wpf/: App.xaml  App.xaml.cs  GitHubHelper.cs  Launcher.csproj  MainWindow.xaml  MainWindow.xaml.cs  SettingsHelper.cs  SteamHelper.cs  app.manifest
src/routes/: +page.svelte
