[package]
name = "neverlosetauriofficial"
version = "1.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# output binary size optimization
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neverlosetauriofficial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rmpv = "1"
reqwest = { version = "0.12", features = ["json"] }
winreg = "0.52"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
sha2 = "0.10"
thiserror = "2"
keyvalues-parser = "0.2"
tokio = { version = "1", features = ["fs", "io-util"] }
sysinfo = "0.39.5"
